<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GetGoing</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button1_normal">walk</string>
    <string name="button2_normal">run</string>
    <string name="button3_normal">ride</string>
    <string name="clock_image">clock</string>
    <string name="speed_image">speed</string>
    <string name="fire_image">fire</string>
    <string name="avg_speed_image">avg_speed</string>
    <string name="road_image">road</string>
    <string name="measure_image">Measure</string>
    <string name="teg_image">Weight</string>
    <string name="age_image">Age</string>
    <string name="date">15.12.2014.</string>
    <string name="time">09:03:48</string>
    <string name="metric_spinner">Metric</string>
    <string name="energyLabel1">Energy:</string>
    <string name="energyLabel2">kcal</string>

    <!-- fb app id -->
    <string name="facebook_app_id">213193922545275</string>
    <string name="fb_login_protocol_scheme">fb213193922545275</string>

    <string name="SettingsActivityTitle" translatable="false">Settings</string>
    <string name="ShowMap" translatable="false">Map</string>
    <string name="action_reset_settings" translatable="false">Reset</string>
    <string name="action_stats" translatable="false">Statistics</string>
    <string name="exploration_mode" translatable="false">Exploration mode</string>
    <string name="walker_text" translatable="false"> Walk</string>
    <string name="runner_text" translatable="false"> Run</string>
    <string name="rider_text" translatable="false"> Ride</string>
    <string name="buttonConfirmSettings" translatable="false"> Accept</string>
    <string name="start" translatable="false"> Start</string>
    <string name="stop" translatable="false"> Stop</string>
    <string name="reset" translatable="false"> Reset</string>
    <string name="setting1" translatable="false"> Measure</string>
    <string name="setting2" translatable="false"> Weight</string>
    <string name="setting3" translatable="false"> Age</string>
    <string name="dialog_set_number" translatable="false">Set</string>
    <string name="dialog_cancel" translatable="false">Cancel</string>
    <string name="dialog_picker_title" translatable="false">Choose a number</string>
    <string name="descImageViewEmpty" translatable="false"></string>
    <string name="dialog_message" translatable="false">No saved data. Press OK to continue.</string>
    <string name="confirm" translatable="false">OK</string>
    <string name="tag" translatable="false">Activity image</string>
    <string name="energy_spent" translatable="false">Energy spent</string>
    <string name="delete_message" translatable="false">Delete record</string>
    <string name="settings_img_up">Picker up</string>
    <string name="settings_img_down">Picker down</string>
    <string name="settings_btn_accept_description">Accept</string>
    <string name="settings_insert_weight_age">Please insert your weight and age.</string>
    <string-array name="measure_units" translatable="false">
        <item>Metric</item>
        <item>Imperial</item>
        <item>US</item>
    </string-array>

    <!-- High accuracy mode alert dialog -->
    <string name="alert_dialog_title">Enable device\'s GPS</string>
    <string name="alert_dialog_message">Turn on your device\'s GPS.</string>
    <string name="alert_dialog_positive_button">Settings</string>
    <string name="alert_dialog_negative_button">Cancel</string>

    <!-- Save button alert dialog -->
    <string name="alert_dialog_title_save_btn">Save route</string>
    <string name="alert_dialog_message_save_btn">Your route is successfully saved.</string>
    <string name="alert_dialog_positive_button_save_btn">OK</string>
    <string name="alert_dialog_negative_button_save_btn">Cancel</string>

    <!-- Reset button alert dialog -->
    <string name="alert_dialog_title_reset_btn">Clear route data</string>
    <string name="alert_dialog_message_reset_btn">Clear map and route data.</string>
    <string name="alert_dialog_positive_reset_save_btn">OK</string>
    <string name="alert_dialog_negative_reset_save_btn">Cancel</string>

    <!-- Back pressed alert dialog -->
    <string name="alert_dialog_title_back_pressed">Leave map</string>
    <string name="alert_dialog_message_back_pressed">All your unsaved data will be lost.</string>
    <string name="alert_dialog_positive_back_pressed">OK</string>
    <string name="alert_dialog_negative_back_pressed">Cancel</string>

    <!-- ShowData empty list alert dialog -->
    <string name="alert_dialog_empty_title">You don\'t have any saved route yet!</string>

    <!-- Notification when app is tracking in background -->
    <string name="notification_title">GetGoing</string>
    <string name="notification_text">Tracking…</string>

    <!-- BarChart labels -->
    <string name="chart_label_walk">Walk</string>
    <string name="chart_label_run">Run</string>
    <string name="chart_label_ride">Ride</string>

    <!-- new strings -->
    <string name="my_profile">My profile</string>
    <string name="my_data">MY DATA</string>
    <string name="placeholder_male">Male</string>
    <string name="placeholder_21_year">21 year</string>
    <string name="placeholder_185cm">185cm</string>
    <string name="placeholder_85kg">85kg</string>
    <string name="total_activities">TOTAL ACTIVITIES</string>
    <string name="placeholder_18_2km">18.2km</string>
    <string name="placeholder_730kcal">730kcal</string>
    <string name="get_ready">Get ready</string>
    <string name="placeholder_running">Running</string>
    <string name="my_activities">My activities</string>
    <string name="last_exercise">Last exercise</string>
    <string name="view_all">View all</string>
    <string name="choose_your_exercise">Choose your exercise</string>
    <string name="can_we_burn_our_legs">Can we burn our legs?</string>
    <string name="kcal">kcal</string>
    <string name="running">Running</string>
    <string name="min">min</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="select_your_gender">Select your gender:</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="how_tall_are_you">How tall are you?</string>
    <string name="enter_your_weight">Enter your weight:</string>
    <string name="textview_age_end">" years"</string>

    <!-- alertdialog radiogroup-->
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <!-- genders -->
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="totalkm_0km">0km</string>
    <string name="totalkcal_0kcal">0kcal</string>
    <string name="walking">Walking</string>
    <string name="tracking_start_0m">0.00m</string>
    <string name="duration">Duration</string>
    <string name="speed">Speed</string>
    <string name="calories">Calories</string>
    <string name="set_goal_exercise">Set goal for this exercise</string>
    <string name="dialog_hint">0000</string>

</resources>


