<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="250dp"
    android:layout_height="150dp"
    android:id="@+id/alertdialog_gender">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_gender"
        android:textSize="22sp"
        android:textColor="@color/mat_gray"
        android:padding="12dp"/>

    <RadioGroup
        android:id="@+id/dialog_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/dialog_rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/male"
            android:textSize="16sp"
             />

        <RadioButton
            android:id="@+id/dialog_rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/female"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/dialog_rb_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/other"
            android:textSize="16sp"/>

    </RadioGroup>

</LinearLayout>