<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_weight="1">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/button1_custom" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/button1_normal"
            android:textSize="52sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/button2_custom" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/button2_normal"
            android:textSize="52sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1">

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/button3_custom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/button3_normal"
        android:textSize="52sp"/>

    </LinearLayout>

</TableLayout>






