<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="@dimen/spinner_horizontal_margin_port"
    android:layout_marginTop="@dimen/spinner_horizontal_margin_port"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       android:layout_margin="20dp">

        <ImageView
            android:id="@+id/measure_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/measure_image"
            android:src="@drawable/measure" />

        <TextView
            android:id="@+id/measure_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/measure_image"
            android:textColor="@color/settings_font"
            android:textSize="@dimen/settings_text_size" />

        <Spinner
            android:id="@+id/metric_spinner"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:prompt="@string/metric_spinner" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
               android:background="@color/settings_view_first_line" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
             android:background="@color/settings_view_second_line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/weight_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:contentDescription="@string/teg_image"
            android:src="@drawable/beam_scale" />

        <TextView
            android:id="@+id/weight_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/teg_image"
            android:textColor="@color/settings_font"
            android:textSize="@dimen/settings_text_size" />

        <EditText
            android:id="@+id/edit_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:inputType="number" />

        <ImageButton
            android:id="@+id/weight_picker_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/arrow_up"
            android:contentDescription="@string/settings_img_up"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:id="@+id/weight_picker_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/strelica_dole_pressed"
            android:contentDescription="@string/settings_img_down"
            android:background="@android:color/transparent"/>
 </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/age_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:contentDescription="@string/age_image"
            android:src="@drawable/sandglass" />

        <TextView
            android:id="@+id/age_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/age_image"
            android:textColor="@color/settings_font"
            android:textSize="@dimen/settings_text_size" />

        <EditText
            android:id="@+id/edit_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:inputType="number" />

        <ImageButton
            android:id="@+id/age_picker_up"
            android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/arrow_up"
            android:contentDescription="@string/settings_img_up"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:id="@+id/age_picker_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/arrow_down"
            android:contentDescription="@string/settings_img_down"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <Button
        android:id="@+id/buttonConfirmSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_margin="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:text="@string/button_accept"
        android:textColor="@color/settings_btn_accept_font"
        android:textSize="@dimen/accept_button_size"
        android:background="@color/settings_btn_accept_bgd"/>
</LinearLayout>