<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/map"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/start_final_pritisnuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/start_final_pritisnuto" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/start_final_pritisnuto"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/save" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/save_button"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/reset" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/clock_image"
            android:src="@drawable/clock" />

        <Chronometer
            android:id="@+id/time_chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/clock"
            android:format="00:00:00"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/time_chronometer"
            android:background="@android:color/transparent"
            android:contentDescription="@string/speed_image"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:src="@drawable/speed" />

        <Chronometer
            android:id="@+id/speed_chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/speed"
            android:format="0:00m/s"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/fire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/fire_image"
            android:src="@drawable/fire" />

        <Chronometer
            android:id="@+id/kcal_chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/fire"
            android:format="0:00kcal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/avg_speed_nobg_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/kcal_chronometer"
            android:background="@android:color/transparent"
            android:contentDescription="@string/avg_speed_image"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:src="@drawable/avg_speed_nobg_full" />

        <Chronometer
            android:id="@+id/avg_speed_chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/avg_speed_nobg_full"
            android:format="0:00m/s"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/road"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/road_image"
            android:src="@drawable/road" />

        <Chronometer
            android:id="@+id/road_chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/road"
            android:format="0:00m"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textSize="20sp" />

    </RelativeLayout>

</LinearLayout>