<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/element_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/walk_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/statistic_walk"
        app:layout_constraintBottom_toTopOf="@+id/separator"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/statistic_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/separator"
        app:layout_constraintLeft_toRightOf="@id/walk_image"
        app:layout_constraintRight_toLeftOf="@+id/delete_layout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/list_element_font"
            android:textSize="@dimen/element_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textEnergy"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/date_padding"
            android:layout_marginLeft="@dimen/date_padding"
            android:text="@string/time"
            android:textColor="@color/list_element_font"
            android:textSize="@dimen/element_text_size"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/textEnergy"
            app:layout_constraintLeft_toRightOf="@+id/textDate"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textEnergy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/date_margin"
            android:text="Energy: 100.0"
            android:textSize="@dimen/element_energy_text_size"
            android:textStyle="bold"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/delete_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:paddingLeft="@dimen/element_padding"
        android:paddingRight="@dimen/element_padding"
        android:src="@drawable/ic_delete_forever_black_24px"
        app:layout_constraintBottom_toTopOf="@+id/separator"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"/>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>